--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "formik": "^2.4.5",
+    "negotiator": "^0.6.3",
+    "next": "14.0.3",
+    "next-intl": "^3.1.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
+    "swr": "^2.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
