--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
     "swr": "^2.2.4",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
