--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.3",
     "negotiator": "^0.6.3",
     "next": "14.0.3",
     "next-intl": "^3.1.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.7",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
+    "react-just-parallax": "^3.1.16",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
     "swr": "^2.2.4",
